# bayesian_bootstrap

./: pyproject.toml  requirements.txt
bayesian_bootstrap/: __init__.py
bayesian_bootstrap/tests/: test_bootstrap.py
